--- a/view/cadastroUsuario.html
+++ b/view/cadastroUsuario.html
@@ -180,7 +180,7 @@
 
       <button type="submit" class="button">Cadastrar</button>
       <label for="retornarlogin"></label>
-      <a href="index.html">Retornar</a>
+      <a href="/../telaLogin.html">Retornar</a>
     </form>
   </div>
 
