melhorias de inculusão de cadastro

--- a/view/menuEventos.html
+++ b/view/menuEventos.html
@@ -127,7 +127,7 @@
 
     <h1 class="menu-title">Menu Eventos</h1>
     <a href="lancarNaoConformidades.php" class="list-group-item list-group-item-action">
-        <i class="fa-regular fa-bell"></i> Não conformidades
+        <i class="fa-regular fa-bell"></i> Lançamentos de Auditorias
       </a>
       <div class="list-group">
         <a href="cadastrarPl.php" class="list-group-item list-group-item-action">
