atualização ean produto

--- a/view/cadastrarProdutos.html
+++ b/view/cadastrarProdutos.html
@@ -103,8 +103,12 @@
                     <option value="10">10</option>
                     <option value="11">11</option>
                     <option value="12">12</option>
-                </select>
+                </select><br><br>
+                <label for="EAN">Ean</label>
+            <input type="text" name="ean" placeholder="EAN" required>
             </div>
+            <a href="menu.php">Menu</a>
+            
 
             <button type="submit" class="button">Cadastrar</button>
         </form>
