--- a/view/cadastrarProdutos.html
+++ b/view/cadastrarProdutos.html
@@ -105,7 +105,7 @@
                     <option value="12">12</option>
                 </select><br><br>
                 <label for="EAN">Ean</label>
-            <input type="text" name="ean" placeholder="EAN" required>
+            <input type="text" name="ean" placeholder="EAN">
             </div>
             <a href="menu.php">Menu</a>
             
