--- a/view/cadastrarProdutos.html
+++ b/view/cadastrarProdutos.html
@@ -106,12 +106,14 @@
                 </select><br><br>
                 <label for="EAN">Ean</label>
             <input type="text" name="ean" placeholder="EAN">
+            
             </div>
-            <a href="menu.php">Menu</a>
             
 
             <button type="submit" class="button">Cadastrar</button>
         </form>
+        <a href="menu.php">Menu</a>
+        <a href="listarProdutos.php">Listar Produtos</a>
     </div>
 </body>
 </html>
